# bicameral-agent

./: README.md  pyproject.toml
src/bicameral_agent/: __init__.py  ab_test.py  assumption_auditor.py  coherence_judge.py  conscious_loop.py  context_refresher.py  dataset.py  embeddings.py  encoder.py  episode_runner.py  followup_classifier.py  gap_scanner.py  gemini.py  heuristic_controller.py  latency.py  logger.py  no_subconscious_controller.py  policy_value_net.py  queue.py  random_controller.py  replay.py  schema.py  scorer.py  serialization.py  signal_classifier.py  simulated_user.py  token_estimator.py  tool_latency.py  tool_primitive.py  validation.py
src/bicameral_agent/data/: research_qa.json
tests/: conftest.py  test_ab_test.py  test_assumption_auditor.py  test_coherence_judge.py  test_conscious_loop.py  test_context_refresher.py  test_dataset.py  test_encoder.py  test_episode_runner.py  test_followup_classifier.py  test_gap_scanner.py  test_gemini.py  test_heuristic_controller.py  test_latency.py  test_logger.py  test_no_subconscious_controller.py  test_policy_value_net.py  test_queue.py  test_random_controller.py  test_replay.py  test_schema.py  test_scorer.py  test_serialization_json.py  test_serialization_parquet.py  test_signal_classifier.py  test_simulated_user.py  test_token_estimator.py  test_tool_latency.py  test_tool_primitive.py  test_validation.py
tests/data/: human_scores.json
tests/fixtures/: followup_dataset.json
