[project]
name = "bicameral-agent"
version = "0.1.0"
description = "Bicameral agent framework for LLM episode tracking and evaluation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
ml = [
    "fastembed>=0.3",
]
torch = [
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bicameral_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
